# MusicFree

./: .eslintrc-disable-remaining.js  .gitignore  app.json  babel.config.js  eslint.config.js  index.js  jest.config.js  jest.mmkv.mock.js  jest.setup.js  metro.config.js  mflac_test_report.md  package-lock.json  package.json  readme-en.md  readme.md  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-android.yml  build-ios.yml
.husky/: commit-msg
android/: build.gradle  gradle.properties  package-validation.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  cenc_jni.cpp
android/app/src/main/cpp/cenc/: aes.cpp  aes.h  cenc_decoder.cpp  cenc_decoder.h  cenc_jni.cpp  mp4.cpp  mp4.h
generator/: generate-assets.mjs
ios/: Podfile
ios/MusicFree/: AppDelegate.h  AppDelegate.mm  AppDelegate.swift  Cenc.mm  Info.plist  LyricUtil.m  MFMflacSupport.h  MFMflacSupport.mm  Mp3Util.m  NativeUtils.m
ios/MusicFree.xcodeproj/: project.pbxproj
release/: announcements.json  version.json
scripts/: clean-android.js  generate-build-info.js  patch-react-native-tab-view.js  patch-react-native-track-player.js  patch-use-latest-callback.js
src/components/: downloadStatusIndicator.tsx
src/constants/: assetsConst.ts  buildInfo.ts  pathConst.ts  uiConst.ts
src/core/: appConfig.ts  downloadNotificationManager.ts  downloader.ts  localMusicSheet.ts  lyricManager.ts  musicMetadataManager.ts  notificationLifecycleManager.tsx  notificationPermissionManager.ts  theme.ts
src/entry/: index.tsx
src/utils/: log.ts  (+26 more)
(+257 files in other folders)
